syntax = "proto3";

package org.project_planton.provider.kubernetes.addon.kubernetesexternalsecrets.v1;

import "buf/validate/validate.proto";
import "org/project_planton/provider/kubernetes/kubernetesexternalsecrets/v1/spec.proto";
import "org/project_planton/provider/kubernetes/kubernetesexternalsecrets/v1/stack_outputs.proto";
import "org/project_planton/shared/metadata.proto";

//kubernetes-external-secrets
message KubernetesExternalSecrets {
  //api-version
  string api_version = 1 [(buf.validate.field).string.const = 'kubernetes.project-planton.org/v1'];

  //resource-kind
  string kind = 2 [(buf.validate.field).string.const = 'KubernetesExternalSecrets'];

  //metadata
  org.project_planton.shared.CloudResourceMetadata metadata = 3 [(buf.validate.field).required = true];

  //spec
  KubernetesExternalSecretsSpec spec = 4 [(buf.validate.field).required = true];

  //status
  KubernetesExternalSecretsStatus status = 5;
}

//kubernetes-external-secrets status.
message KubernetesExternalSecretsStatus {
  //stack-outputs
  KubernetesExternalSecretsStackOutputs outputs = 1;
}
